--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fade2a83e50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd4783c04d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fade2b4a590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fade2b4a790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd477bff390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd477bff590&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fade32d5ed0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fade32e3110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd47838acd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd47838aed0&gt;]</pre>
 </div>
 
 </div>
