--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd4783c04d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbc1095c450&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd477bff390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd477bff590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc1016e410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbc1016e610&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd47838acd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd47838aed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc108facd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbc108faed0&gt;]</pre>
 </div>
 
 </div>
