--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe46dfbd450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb6f7eae090&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe46de58490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe46de58690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb6f7ca9490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb6f7ca9690&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe46e5e2dd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe46e5e2fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb6f7cd0350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb6f80b3f50&gt;]</pre>
 </div>
 
 </div>
