--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9c5929f9d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f42b9f92a50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c58d06410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9c58d06610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f42b9d7e490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f42b9d7e690&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c59490d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9c59490f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f42ba18ad90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f42ba18af90&gt;]</pre>
 </div>
 
 </div>
