--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdea3528290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8823c5c390&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdea35f5510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdea35f5710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8822bf7590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8822bf7790&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdea3d80d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdea3d80f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8823381f10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f882338f150&gt;]</pre>
 </div>
 
 </div>
