--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb9fadd5050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f453d0550d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb9fa60d510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb9fa60d750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f453cad2550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f453cad2750&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb9fad57e50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb9fad650d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f453d25ced0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f453d26a110&gt;]</pre>
 </div>
 
 </div>
