--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fafb5d17510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8fd76e1e90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fafb5cc3510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fafb5cc3710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8fd76ff590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8fd74c47d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fafb644ddd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fafb644dfd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8fd74e5e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8fd78df0d0&gt;]</pre>
 </div>
 
 </div>
