--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f25a04e8550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa92a4d3ed0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2576ab84d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f25764f06d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa929f66410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa929f66610&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f257651aa10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2576c7bfd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa92a6f2c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa92a6f2e90&gt;]</pre>
 </div>
 
 </div>
