--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f708443ffd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1d0a8d7090&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f70847bafd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7084448510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1d0aa0a050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1d0ad1b690&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7084bd4c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7084bc4210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1d0b124910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1d0b12cf50&gt;]</pre>
 </div>
 
 </div>
