--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f95f06167d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fce71f0bdd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f95ef6a54d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f95ef6a56d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fce71d17410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fce71972550&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f95efdefd90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f95ef6cee50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fce720f2d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fce720fded0&gt;]</pre>
 </div>
 
 </div>
