--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2dc8968350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8e94bbded0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2dc8741510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2dc8741710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8e9485d450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8e9485d650&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2dc8b52dd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2dc8b52fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8e94fe9c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8e94fe9e90&gt;]</pre>
 </div>
 
 </div>
