--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb6f03a6e50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2111dc5590&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb6f01fc550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb6f01fc750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2111835450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2111835650&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb6f0986e50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb6f0993090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2111fc0d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2111fc0f10&gt;]</pre>
 </div>
 
 </div>
