--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8f665a7690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd59d7de150&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8f6641b650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8f6641b850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd59da57610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd59da57810&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8f66ba4f90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8f66bb31d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd59de3fe50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd59de4d090&gt;]</pre>
 </div>
 
 </div>
