--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd59d7de150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5c307a8dd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd59da57610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd59da57810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c3074a410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5c3074a610&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd59de3fe50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd59de4d090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c30ed4d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5c30ed4f50&gt;]</pre>
 </div>
 
 </div>
