--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7708f3c8d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1f4269c190&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7708af94d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7708af96d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1f4250f510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1f4250f710&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7708f10050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7708f10250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1f42c9ae10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1f42c9afd0&gt;]</pre>
 </div>
 
 </div>
