--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f31f5d03b50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9b8424f050&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f31f5f54490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f31f5f54690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9b831fb3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9b831fb5d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f31f6360d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f31f6360f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9b83987c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9b83987e90&gt;]</pre>
 </div>
 
 </div>
