--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe6e9a47110&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa0fa49c290&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe6e94b0790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe6e94b0990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa0f9f08410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa0f9f08610&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe6e9c4a150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe6e9c4a350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa0fa693cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa0fa693ed0&gt;]</pre>
 </div>
 
 </div>
