--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa0fa49c290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9d2be54790&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa0f9f08410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa0f9f08610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9d2bf1c510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9d2bf1c710&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa0fa693cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa0fa693ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9d2c6a6e10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9d2c6a6fd0&gt;]</pre>
 </div>
 
 </div>
