--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fec16d6a610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbe4e62e1d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fec16ff7490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fec16ff7690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbe4e49e6d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbe4e49e8d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fec17408dd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fec17408fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbe4ec29f90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbe4ec381d0&gt;]</pre>
 </div>
 
 </div>
